--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,10 +1,6 @@
-{{page-title 'TrackingResource'}}
+{{page-title 'RefCount Resource Demo'}}
 
 {{outlet}}
 
-<div>
-  <Row />
-</div>
-<div>
-  <Row />
-</div>
+<Row />
+<Row />
